logs/Slang/chapter-7/queues/insert_assign.sv.log
name: insert-assign
description: Update queue by assignment (insert)
should_fail: 0
tags: 7.10.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/queues/insert_assign.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/queues/insert_assign.sv:9:6: error: dimension requires a constant range
int q[$];
     ^~~
